# marin-experiments

./: .gitignore  README.md
.claude/: settings.local.json
.github/scripts/: nightly_dry_run.py
.github/workflows/: build-openthoughts-agent-image.yml  dry-run-import-fix.yml  repin-lockfiles.yml
adaptive-sparsity/: README.md  REPORT.md  collect_results.py  curriculum.sh  data.py  dispatch.py  heuristic.py  iso_step.py  launch.py  model.py  optimizer.py  pyproject.toml  sweep.sh  train.py
delayed-gradient-pp/: README.md  REPORT.md  _smoke_delay.py  adamh.py  analyze_isoloss.py  data.py  delay_optim.py  launch.py  model.py  pp_throughput_model.py  pyproject.toml
grug-moe-pp/: NOTES.md  README.md  benchmark.py  check_manual_pp.py  check_zb.py  gpu_smoke.py  kernel_overlap_probe.py  levanter-stage-axis.patch  oracle.py  overlap_probe.py  perf.py  perf_zb.py  pipeline.py  pipeline_manual.py  pipeline_zb.py  ppermute_probe.py  thread_probe.py
megagpt-speedrun/: DESIGN.md  NEXT_RUN.md  PLAN_24H.md  PP_RESULTS.md  PROGRESS.md  README.md  REPORT.md  SFT.md  SUMMARY.md  SWEEP.md  _diag_ragged.py  _smoke_gpu_shard.py  _smoke_sparsity.py  analyze_profile.py  analyze_sweep.py  async_pipeline.py  ce_kernel_patch.py  cw_patch.py  data.py  decision_table.py  delete_cw_leftovers.py  design_scan.py  dispatch.py  geometry_explore.py  h100_pp_model.py  heuristic.py  iris_jobs.py  launch.py  launch_bench.sh  launch_cw.sh  launch_cwdata.sh  launch_sweep1.sh  launch_sweep2.sh  mirror_to_cw.py  model.py  moe_calculator.html  monitor.py  ops.md  perf_flop_breakdown.py  pp_overlap_probe.py  (+9 more)
openthoughts-agent/: AGENTS.md  README.md  REPORT.md  launch_eval.py  launch_rl.py  launch_sft.py  pyproject.toml
openthoughts-agent/docker/: Dockerfile.agent-task
openthoughts-agent/eval/: agent_loop.py  eval_smoke.py  grade.py  gvisor_smoke.py  model_serving.py  sandbox.py
openthoughts-agent/models/: checkpoint.py  registry.py
openthoughts-agent/rl/: agent.py  environment.py
openthoughts-agent/tests/: test_agent_loop.py  test_agent_sft_encode.py  test_rl_env.py
openthoughts-agent/training/: agent_sft.py  common.py
reentrant/: README.md  REPORT.md  checkpointing.py  data.py  eval_sweep.py  heuristic.py  launch.py  model.py  optimizer.py  pyproject.toml  test_eval_sweep.py  test_optimizer.py  train.py
speech-asr/: launch.py  pyproject.toml  train.py
tiny-stories/: launch.py  pyproject.toml  train.py
tunix-delphi-rl/: AGENTIC_PLAN.md  AGENTS.md  CURRICULUM_DESIGN.md  DESIGN.md  README.md  REPORT.md  RL_HEADROOM.md  _probe_arith_format.py  _probe_toolcall.py  _validate_m4_arithmetic.py  _validate_m4_rope.py  _validate_m4_train.py  _validate_m5_arithmetic.py  _validate_m5_train.py  _validate_mport.py  agentic_common.py  agentic_sft.py  agentic_tools.py  coding_agent_env.py  coding_env.py  coding_problems.py  coding_tasks.py  curriculum.py  curriculum_env.py  delphi_qwen3.py  launch.py  launch_agentic.py  launch_chat_sft.py  launch_coding.py  launch_curriculum.py  launch_delphi.py  launch_multiturn.py  launch_qwen3_smoke.py  micropython.py  pipeline.py  pyproject.toml  test_delphi_load.py  test_micropython.py  test_smoke_cats.py  train_agentic.py  (+4 more)
tunix-delphi-rl/environments/: agentic_tools.py  coding_agent_env.py  coding_env.py  curriculum.py  curriculum_env.py
tunix-delphi-rl/examples/: launch.py  toy_cats.py
tunix-delphi-rl/models/: delphi_patch.py  delphi_qwen3.py  qwen3_loader.py  registry.py
tunix-delphi-rl/problems/: arithmetic.py  coding_problems.py  coding_tasks.py
tunix-delphi-rl/serving/: SERVING_PLAN.md  _export_smoke.py  export_hf.py  launch_serve.py  query.py  serve.py
tunix-delphi-rl/sft_data/: __init__.py  instruction_datasets.py  instruction_datasets_marin_original.py
tunix-delphi-rl/tests/: test_chat_sft.py  test_coding_agent_env.py  test_coding_env.py  test_coding_problems.py  test_coding_tasks.py  test_curriculum.py  test_curriculum_env.py  test_delphi_config.py  test_delphi_load.py  test_export_hf_roundtrip.py  test_instruction_datasets.py  test_micropython.py  test_multistage_problems.py  test_serve.py  test_smoke_cats.py
tunix-delphi-rl/training/: agentic_sft.py  chat_sft.py  pipeline.py  train_agentic.py  train_coding.py  train_curriculum.py  train_delphi.py  train_multiturn.py
