[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delayed-gradient-pp"
version = "0.1.0"
description = "Delayed-gradient / pipeline-parallel staleness experiments for grug MoE, using marin as a library dependency."
requires-python = ">=3.11,<3.13"
dependencies = [
    # The marin umbrella is published to PyPI as `marin-core` (the `marin` name
    # only exists as stale GitHub-release wheels; see the find-links note below).
    "marin-core",
    "marin-levanter",
    # haliax and fray are imported directly (model.py uses haliax; the launcher
    # and trainer use fray.cluster.ResourceConfig), so declare them rather than
    # relying on the levanter/iris transitive closure.
    "marin-haliax",
    "marin-fray",
    "marin-iris",
    "marin-zephyr",
    "marin-rigging",
    # marin.datakit.normalize imports the dupekit module unconditionally; it is
    # provided by the marin-dupekit distribution, which marin does not pull in
    # itself, so declare it here.
    "marin-dupekit",
]

# Iris's remote worker runs `uv sync --all-packages --no-group dev`, which
# errors if the dev group doesn't exist. Define an empty one so --no-group
# has a group to exclude.
[project.optional-dependencies]
tpu = ["marin-core[tpu]; sys_platform == 'linux'"]

[dependency-groups]
dev = []

[tool.uv]
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
# Mirrored from submodules/marin/pyproject.toml; omitting these makes uv
# resolution fail in the same way it does for marin itself.
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",
]

# The marin-* dev wheels resolve from PyPI (marin-core, marin-levanter, ... as
# 0.2.x.devYYYYMMDDHHMM, published nightly). We intentionally do NOT use the
# GitHub `*-latest` release find-links here: those serve `0.99.dev<date>` wheels
# that (a) are frozen at 2026-05-29 and (b) outrank the fresh PyPI `0.2.x.dev`
# wheels by version, so including them silently pins stale marin code. kitoken
# ships a pinned native build that is not on PyPI, so it keeps its find-link.
find-links = [
    "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
]

# marin depends on resiliparse>=0.17.2 which only exists on this custom index.
# Mirrored from submodules/marin/lib/marin/pyproject.toml. Without it, uv
# resolves resiliparse from PyPI which caps at 0.16.0 and resolution fails.
[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
resiliparse = { index = "marin-resiliparse" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
