[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openthoughts-agent"
version = "0.1.0"
description = "OpenThoughts terminal-agent post-training on Qwen3-8B via google-tunix on the marin/iris TPU cluster."
requires-python = ">=3.11,<3.13"
# google-tunix brings jax/flax/grain/transformers/datasets transitively (see uv.lock).
# marin-iris is needed for `uv run iris ...` job submission. marin-fray pulls the
# shared cluster client utilities the iris CLI expects.
dependencies = [
    "google-tunix",
    "marin-iris",
    "marin-fray",
]

[project.optional-dependencies]
# Selected on the TPU worker via `--extra tpu`; brings jax[tpu]/libtpu.
tpu = ["google-tunix[prod]; sys_platform == 'linux'"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run is fast + CPU-only (tokenizer-level checks). Anything that loads
# Qwen3-8B weights or runs a JAX training loop is marked ``slow`` and excluded;
# run those explicitly with ``-m slow`` on a host with the model / accelerator.
addopts = "-m 'not slow'"
markers = [
    "slow: tests that download/load model weights or run a JAX training loop (TPU/model required; excluded by default)",
]

[tool.uv]
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
# Mirrors the tunix-delphi-rl overrides that make the google-tunix + marin-*
# resolution converge (tunix pins conflict with the marin nightly wheels otherwise).
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",
]

[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
resiliparse = { index = "marin-resiliparse" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
